dnl ##
dnl ## libCxClient - Citadel/UX Extensible Client API
dnl ## Copyright (c) 2000, SCCG/Flaming Sword Productions
dnl ## All Rights Reserved
dnl ##
dnl ## $Id$

AC_INIT(aclocal.m4)

dnl without this order in this file, automake will be confused!
dnl the argument 
AM_CONFIG_HEADER(autoconf.h)

dnl inits some variables needed by automake's Makefiles.
dnl add here the package name and it's version number. It will
dnl be defined in config.h and in the Makefiles
AM_INIT_AUTOMAKE(libCxClient, 0.21)

dnl sets the prefix to $KDEDIR or /usr/local/kde (if no $KDEDIR
dnl set) for the case, that there is no --prefix
AC_PREFIX_DEFAULT(/usr/local)

AM_PROG_LIBTOOL

dnl Do we wish to compile in debugging information?
AC_MSG_CHECKING([for debugging mode])
AC_ARG_WITH(debug,
    [  --with-debug            Enable all debugging messages. ],
    [
       AC_MSG_RESULT(yes)
       AC_DEFINE_UNQUOTED(DEBUG, 1, [Define if you want to use debugging mode.])
    ], [
       AC_MSG_RESULT(no)
    ]
) 

dnl add here all your Makefiles. This are created by configure
AC_OUTPUT(Makefile src/Makefile)
